--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body, html {height: 100%;}
 
 a {color: #777; text-decoration: none; border-bottom: 1px solid #CCFF26;}
 a:hover {border-bottom: 1px solid #CCFF26; color: #222}
-p {font-weight: 200; font-size: 20px;}
+p {font-size: 20px;}
 
 .name {font-family: 'Source Code Pro', monospace; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
 
