--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {font-family: 'Source Code Pro', monospace; margin: 0 auto; background: #efefef; line-height: 1.8em; padding: 12px; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
-.wrapper {box-sizing: border-box; background: #fff; box-shadow: 0 0 5px #888; box-shadow: 0 0 5px #888; height: 100%; overflow: auto; }
+.wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow: auto; }
 
 
 a {text-decoration: none; border-bottom: 1px solid #0000ff;}
@@ -11,7 +11,7 @@ p {font-family: 'Source Sans Pro', sans-serif; font-size: 20px;}
 
 .name {font-family: 'Source Code Pro', monospace; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
 
-.container {margin: 0 auto; width: 600px; height: 400px; padding: 80px 12px; overflow: auto;}
+.container {margin: 0 auto; padding: 80px 12px; overflow: auto;}
 
 .meta {text-transform: uppercase; font-family: 'Source Sans Pro', sans-serif; font-size: 11px; letter-spacing: .15em;}
 .meta a:hover {border-bottom: 1px solid #0000ff;}
