--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Stylez */
-body {font-family: 'Source Code Pro', monospace; margin: 0 auto; background: #efefef; line-height: 1.8em; padding: 12px; box-sizing: border-box; color: #333;}
+body {font-family: 'Source Code Pro', monospace; margin: 0 auto; line-height: 1.8em; padding: 12px; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
 .wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow: auto; }
@@ -11,7 +11,7 @@ p {font-family: 'Source Code Pro', sans-serif; font-size: 20px;}
 
 .name {font-family: 'Source Code Pro', monospace; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
 
-.container {margin: 0 auto; padding: 80px 12px; overflow: auto;}
+.container {width: 800px; margin: 0 auto; padding: 80px 12px; overflow: auto;}
 
 .meta {text-transform: uppercase; font-family: 'Source Sans Pro', sans-serif; font-size: 11px; letter-spacing: .15em;}
 .meta a:hover {border-bottom: 1px solid #0000ff;}
