--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body, html {height: 100%;}
 
 a {color: #333; text-decoration: none; border-bottom: 2px solid #0000ff;}
 a:hover {color: #0000ff; border-bottom: 3px solid #0000ff;}
-p {font-family: 'Source Code Pro', sans-serif; font-size: 20px;}
-h2 {padding: 12px, 2px, 12px, 12px;}
+p {font-family: 'Source Code Pro', sans-serif; font-size: 20px; padding: 12px, 2px, 12px, 12px;}
+
 
 .name {font-family: 'Source Code Pro', monospace; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
 
