--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Stylez */
-body {font-family: 'Source Code Pro', monospace; margin: 0 auto; line-height: 1.8em; padding: 12px; box-sizing: border-box; color: #333;}
+body {font-family: 'Source Code Pro', monospace; margin: 0 auto; line-height: 1.8em; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
 .wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow: auto; }
@@ -7,7 +7,14 @@ body, html {height: 100%;}
 
 a {color: #333; text-decoration: none; border-bottom: 2px solid #0000ff;}
 a:hover {color: #0000ff; border-bottom: 3px solid #0000ff;}
-p {font-family: 'Source Code Pro', sans-serif; font-size: 20px; padding: 12px, 2px, 12px, 12px;}
+p {font-family: 'Source Code Pro', sans-serif; font-size: 20px;
+
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 
 
 .name {font-family: 'Source Code Pro', monospace; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
