--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {font-family: 'Source Code Pro', monospace; margin: 0 auto; line-height: 1.4em; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
-.wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow-y: scroll; }
+.wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch;}
 
 
 a {color: #333; text-decoration: none; border-bottom: 2px solid #0000ff;}
