--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ p {font-family: 'Source Code Pro', sans-serif; font-size: 18px;
 .name {font-family: 'Source Code Pro', monospace; font-size: 26px; font-weight: 900; padding-bottom: 18px;}
 
 .container {margin: 0 auto; padding: 50px 50px; overflow: auto;
-background: #FFA500;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #ffffff, #FFA500);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #ffffff, #FFA500); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #FF6600;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #ffffff, #FF6600);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #ffffff, #FF6600); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .meta {text-transform: uppercase; font-family: 'Source Sans Pro', sans-serif; font-size: 11px; letter-spacing: .15em;}
