--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {font-family: 'Source Code Pro', monospace; margin: 0 auto; line-height: 1.6em; box-sizing: border-box; color: #333;}
+body {font-family: 'Source Code Pro', monospace; font-size: 12px; margin: 0 auto; line-height: 1.6em; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
 .wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch;}
@@ -6,7 +6,7 @@ body, html {height: 100%;}
 
 a {color: #333; text-decoration: none; border-bottom: 2px solid #0000ff;}
 a:hover {color: #0000ff; border-bottom: 3px solid #0000ff;}
-p {font-family: 'Source Code Pro', sans-serif; font-size: 18px;
+p {font-family: 'Source Code Pro', sans-serif; font-size: 16px;
 
     display: block;
     margin-block-start: 1em;
@@ -19,9 +19,9 @@ p {font-family: 'Source Code Pro', sans-serif; font-size: 18px;
 .name {font-family: 'Source Code Pro', monospace; font-size: 26px; font-weight: 900; padding-bottom: 18px;}
 
 .container {margin: 0 auto; padding: 50px 50px; overflow: auto;
-background: #FF6600;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #ffffff, #FF6600);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #ffffff, #FF6600); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #FF9900;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #ffffff, #FF9900);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #ffffff, #FF9900); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .meta {text-transform: uppercase; font-family: 'Source Sans Pro', sans-serif; font-size: 11px; letter-spacing: .15em;}
