--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {font-family: 'Source Code Pro', sans-serif; font-size: 16px;
 
 .name {font-family: 'Source Code Pro', monospace; font-size: 26px; font-weight: 900; padding-bottom: 18px;}
 
-.container {margin: 0 auto; padding: 50px 50px 100px 50px; overflow: auto;
+.container {margin: 0 auto; padding: 50px; overflow: auto;
 background: #FF9900;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to bottom, #ffffff, #FF9900);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to bottom, #ffffff, #FF9900); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
