--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ p {font-family: 'Source Code Pro', sans-serif; font-size: 16px;
 }
 
 
-.name {font-family: 'Source Code Pro', monospace; font-size: 26px; font-weight: 900; padding-bottom: 18px;}
+.name {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
+    font-size: 26px; font-weight: 900; padding-bottom: 18px;}
 
 .container {margin: 0 auto; padding: 50px 50px; overflow: auto;
 background: #FF9900;  /* fallback for old browsers */
