--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,11 @@ body, html {height: 100%;}
 
 a {color: #333; text-decoration: none; border-bottom: 2px solid #0000ff;}
 a:hover {color: #0000ff; border-bottom: 3px solid #0000ff;}
-p {font-family: 'Source Code Pro', sans-serif; font-size: 16px;
+p {font-family: neue-haas-grotesk-display, sans-serif;
+
+font-weight: 400;
+
+font-style: normal; font-size: 16px;
 
     display: block;
     margin-block-start: 1em;
