--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {font-family: neue-haas-grotesk-display,sans-serif;
 font-weight: 200;
-font-style: normal; font-size: 12px; margin: 0 auto; line-height: 1.6em; box-sizing: border-box; color: #333;}
+font-style: normal; font-size: 14px; margin: 0 auto; line-height: 1.6em; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
 .wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch;}
@@ -23,7 +23,7 @@ font-style: normal; font-size: 16px;
 
 
 .name {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
-    font-size: 26px; font-weight: 900; padding-bottom: 18px;}
+    font-size: 36px; padding-bottom: 18px;}
 
 .container {margin: 0 auto; padding: 50px 50px; overflow: auto;
 background: #FF9900;  /* fallback for old browsers */
