--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {font-family: neue-haas-grotesk-display,sans-serif;
-font-weight: 200;
-font-style: normal; font-size: 14px; margin: 0 auto; line-height: 1.6em; box-sizing: border-box; color: #333;}
+font-weight: 400;
+font-style: normal; font-size: 16px; margin: 0 auto; line-height: 1.6em; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
 .wrapper {box-sizing: border-box; background: #fff; height: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch;}
@@ -10,9 +10,9 @@ a {color: #333; text-decoration: none; border-bottom: 2px solid #0000ff;}
 a:hover {color: #0000ff; border-bottom: 3px solid #0000ff;}
 p {font-family: neue-haas-grotesk-display, sans-serif;
 
-font-weight: 400;
+font-weight: 500;
 
-font-style: normal; font-size: 16px;
+font-style: normal; font-size: 18px;
 
     display: block;
     margin-block-start: 1em;
@@ -24,6 +24,9 @@ font-style: normal; font-size: 16px;
 
 .name {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
     font-size: 36px; padding-bottom: 18px;}
+
+h2 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
+    font-size: 36px;}
 
 .container {margin: 0 auto; padding: 50px 50px; overflow: auto;
 background: #FF9900;  /* fallback for old browsers */
