--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ p {font-family: neue-haas-grotesk-display, sans-serif;
 font-weight: 500;
 
 font-style: normal; font-size: 24px;
+    padding-bottom: 12px;
 
     display: block;
     margin-block-start: 1em;
@@ -23,7 +24,7 @@ font-style: normal; font-size: 24px;
 
 
 .name {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
-    font-size: 36px; padding-bottom: 18px;}
+    font-size: 36px; padding-bottom: 14px;}
 
 h2 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
     font-size: 36px;}
