--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ p {font-family: neue-haas-grotesk-display, sans-serif;
 font-weight: 500;
 
 font-style: normal; font-size: 24px;
-    padding-bottom: 12px;
+    line-height: 30px;
 
     display: block;
     margin-block-start: 1em;
