--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ font-style: normal; font-size: 20px;
 
 
 .name {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
-    font-size: 38px; padding-bottom: 14px;}
+    font-size: 38px; padding-bottom: 14px; line-height: 42px;}
 
 h2 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 200; font-style: normal; 
     font-size: 36px;}
