--- a/update.css
+++ b/update.css
@@ -5,7 +5,7 @@
 body {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500; 
     font-size: 48px; line-height: 72px;}
 a {color: #333; text-decoration: none; }
-a:hover {color: #6600cc; color: white; background: black;}
+a:hover {color: #6600cc; font-style: italic;}
 
 
 h1 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500; 
@@ -45,7 +45,7 @@ font-style: normal; font-size: 30px;
 
 
 .active { 
-font-weight: 600;
+font-weight: 600; font-style: italic;
 }
 
 .underline {
