--- a/update.css
+++ b/update.css
@@ -26,10 +26,10 @@ font-style: normal; font-size: 30px;
     margin-inline-end: 0px;
 }
 
-.invert:hover {
+/*.invert:hover {
 	background-color: black;
 	color: white;
-}
+}*/
  	
 
 .collapsible {
