--- a/update.css
+++ b/update.css
@@ -5,7 +5,7 @@
 body {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500; 
     font-size: 48px; line-height: 72px;}
 a {color: #333; text-decoration: none; }
-a:hover {color: #6600cc; font-style: italic;}
+a:hover {font-style: italic; font-weight: 600;}
 
 
 h1 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500; 
