--- a/update.css
+++ b/update.css
@@ -72,7 +72,7 @@ canvas{
 @media (max-width: 450px) { 
   .container {
     padding: 25px;}
-  p {font-size: 24px;}
+  p {font-size: 20px; line-height: 32px;}
   h1 {font-size: 48px;}  
   }
 
