--- a/update.css
+++ b/update.css
@@ -12,7 +12,9 @@ h1 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500;
     font-size: 60px; line-height: 60px;} 
 
 h2 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 400; 
-    font-size: 36px; line-height: 36px; padding: 0}  
+    font-size: 34px; line-height: 36px; padding: 0
+    margin-top:22px;
+    margin-bottom: 8px;}  
 
 p {font-family: neue-haas-grotesk-display, sans-serif;
 
@@ -27,6 +29,7 @@ font-style: normal; font-size: 24px;
     margin-block-end: 26px;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    margin-top: 8px;
 }
 
 /*.invert:hover {
