--- a/update.css
+++ b/update.css
@@ -31,6 +31,7 @@ font-style: normal; font-size: 24px;
     margin-inline-end: 0px;
     margin-top: 8px;
 }
+
 ul { list-style-type: none;
    font-size: 24px;
    line-height: 1.5em;
@@ -45,6 +46,7 @@ font-style: normal;
 
 li {
     margin-bottom: .5em;
+}
 }
 
 /*.invert:hover {
