--- a/update.css
+++ b/update.css
@@ -3,7 +3,7 @@
 .container {margin: 0 auto; padding: 50px 80px; overflow: auto; }
 
 body {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500; 
-    font-size: 48px; line-height: 72px;}
+    font-size: 48px; line-height: 1.5em;}
 a {color: #333; text-decoration: none; }
 a:hover {font-style: italic; font-weight: 600;}
 
@@ -12,7 +12,7 @@ h1 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 500;
     font-size: 60px; line-height: 60px;} 
 
 h2 {font-family: neue-haas-grotesk-display, sans-serif; font-weight: 400; 
-    font-size: 30px; line-height: 30px; padding: 0
+    font-size: 30px; line-height: 1.25em; padding: 0
     margin-top:22px;
     margin-bottom: 8px;}  
 
@@ -22,7 +22,7 @@ p {font-family: neue-haas-grotesk-display, sans-serif;
 font-weight: 500;
 
 font-style: normal; font-size: 24px;
-    line-height: 32px;
+    line-height: 1.5em;
 
     display: block;
     margin-block-start: 1em;
@@ -31,6 +31,7 @@ font-style: normal; font-size: 24px;
     margin-inline-end: 0px;
     margin-top: 8px;
 }
+
 
 ul { list-style-type: none;
    font-size: 24px;
@@ -47,7 +48,8 @@ font-style: normal;
 li {
     margin-bottom: .5em;
 }
-}
+
+
 
 /*.invert:hover {
 	background-color: black;
@@ -95,8 +97,9 @@ canvas{
 @media (max-width: 450px) { 
   .container {
     padding: 25px;}
-  p {font-size: 20px; line-height: 32px;}
+  p {font-size: 20px; line-height: 1.5em;}
+  ul {font-size: 20px; line-height: 1.5em;}
   h1 {font-size: 48px;}
-  h2 {font-size: 24px; line-height: 36px;}  
+  h2 {font-size: 24px; line-height: 1.5em;}  
   }
 
