--- a/update.css
+++ b/update.css
@@ -33,7 +33,7 @@ font-style: normal; font-size: 24px;
 }
 
 
-ul {
+ul { list-style-type: none;
    font-size: 24px;
    line-height: 1.5em;
     margin-top: 0px;
