--- a/update.css
+++ b/update.css
@@ -36,7 +36,7 @@ font-style: normal; font-size: 24px;
 ul { list-style-type: none;
    font-size: 24px;
    line-height: 1.5em;
-    margin-top: 0px;
+    margin-top: .5em;
     margin-left: 1em;
     padding: 0;
     font-weight: 500;
