--- a/update.css
+++ b/update.css
@@ -16,6 +16,7 @@ h2 {
   font-family: neue-haas-grotesk-display, sans-serif;
   padding: 0px;
   margin: 0;
+  font-weight: 500;
   } 
 
 h3 {
@@ -70,7 +71,7 @@ li {
   background-color: white;   
   padding: 0px;
   width: 100%;
-  font-weight: 400px;
+  font-weight: 500;
   text-align: left;
   margin:0;
 }
