--- a/update.css
+++ b/update.css
@@ -16,6 +16,7 @@ h2 {
   font-family: neue-haas-grotesk-display, sans-serif;
   padding: 0px;
   margin: 0;
+  font-weight: 500;
   } 
 
 h3 {
@@ -77,7 +78,8 @@ li {
 
 
 .active { 
-font-weight: 600; font-style: italic;
+font-style: italic;
+font-weight: 600;
 }
 
 .underline {
