--- a/update.css
+++ b/update.css
@@ -16,7 +16,6 @@ h2 {
   font-family: neue-haas-grotesk-display, sans-serif;
   padding: 0px;
   margin: 0;
-  font-weight: 500;
   } 
 
 h3 {
@@ -108,8 +107,8 @@ canvas{
     padding: 25px;}
   p {font-size: 18px; line-height: 1.75em;}
   ul {font-size: 20px; line-height: 1.5em;}
-  h1 {font-size: 48px;}
-  h2 {font-size:32px;line-height: 1.5em; font-weight: 500;}
+  h1 {font-size: 44px;}
+  h2 {font-size:32px;line-height: 1.5em;}
   h3 {font-size: 24px; line-height: 1.5em;}  
   }
 
